--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 nav {
-    margin-bottom: 25px;
-    margin-top: 20px;
+    margin-bottom: 500px;
+
 }
 
 dd {
@@ -20,4 +20,27 @@ dd {
 
 .book-container .price-label p {
     margin: 4px 0 0 0;
+}
+
+body{
+ /*   background: url(https://static.pexels.com/photos/196652/pexels-photo-196652.jpeg) no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+*/
+    background: url(https://static.pexels.com/photos/196652/pexels-photo-196652.jpeg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.container-fluid{
+    margin-top: 75px;
+}
+
+.panel-footer{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
