--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,11 @@ body{
 .description{
     font-size: 150%;
 }
+
+.highlight-clean{
+    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, .5);
+    padding-bottom: 15px;
+    border-radius: 15px;
+
+}
