events on profile page works, join and see who joined events works

--- a/css/main.css
+++ b/css/main.css
@@ -56,3 +56,40 @@ body{
     border-radius: 15px;
 
 }
+
+.jumbotron{
+    background: rgba(255, 255, 255, 0.7);
+}
+
+.headline{
+    color: ghostwhite;
+
+    font-size: 50px;
+
+    /*
+    text-shadow: 1px 1px 0 #000,
+    -1px 1px 0 #000,
+    1px -1px 0 #000,
+    -1px -1px 0 #000,
+    0px 1px 0 #000,
+    0px -1px 0 #000,
+    -1px 0px 0 #000,
+    1px 0px 0 #000,
+    2px 2px 0 #000,
+    -2px 2px 0 #000,
+    2px -2px 0 #000,
+    -2px -2px 0 #000,
+    0px 2px 0 #000,
+    0px -2px 0 #000,
+    -2px 0px 0 #000,
+    2px 0px 0 #000,
+    1px 2px 0 #000,
+    -1px 2px 0 #000,
+    1px -2px 0 #000,
+    -1px -2px 0 #000,
+    2px 1px 0 #000,
+    -2px 1px 0 #000,
+    2px -1px 0 #000,
+    -2px -1px 0 #000;
+    */
+}
